# sift

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/sift/: __init__.py  baseline.py  cli.py  config.py  detectors.py  entropy.py  findings.py  scanner.py
tests/: test_baseline.py  test_detectors.py  test_entropy.py  test_scanner.py
