[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.1.0"
description = "Scan source code for accidentally committed secrets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["security", "secrets", "scanner", "pre-commit", "ci"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
sift = "sift.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# sift scanning sift: the test files contain example secrets on purpose.
[tool.sift]
exclude = ["tests/*"]
